--- a/com.timgroup.saros.proxy/build.properties
+++ b/com.timgroup.saros.proxy/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               build.properties
+               build.properties,\
+               saros.proxy.log4j.properties
