--- a/com.timgroup.saros.proxy/saros.proxy.log4j.properties
+++ b/com.timgroup.saros.proxy/saros.proxy.log4j.properties
@@ -20,31 +20,4 @@ log4j.appender.ErrorsOnlyAppender.layout.ConversionPattern=%-5p %d{yyyy-MM-dd HH
 #Only log errors and warnings
 log4j.appender.ErrorsOnlyAppender.Threshold=WARN
 
-# We are not interested in errors from Smack in the Eclipse log 
-log4j.logger.org.jivesoftware=FATAL, EclipseLogAppender
-log4j.logger.org.jivesoftware.smackx.jingle.nat.ICEResolver=DEBUG
-
-log4j.logger.de.fu_berlin.inf.dpp=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.MessagingManager=INFO
-log4j.logger.de.fu_berlin.inf.dpp.concurrent=INFO
-log4j.logger.de.fu_berlin.inf.dpp.concurrent.management.ConcurrentDocumentManager=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.concurrent.undo.UndoManager=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.editor.internal.EditorAPI=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.editor.EditorManager=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.net.internal.XMPPChatTransmitter=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.net.business.JupiterHandler=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.net.internal.RequestPacketExtension=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.invitation.internal.OutgoingInvitationProcess=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.invitation.internal.IncomingInvitationProcess=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.net.internal.MultiUserChatManager=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.net.internal.ActivitySequencer=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.net.internal.ExecuterQueue=INFO
-log4j.logger.de.fu_berlin.inf.dpp.net.internal.SubscriptionListener=INFO
-log4j.logger.de.fu_berlin.inf.dpp.net.internal.ConsistencyWatchdogReceiver=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.net.jingle=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.project=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.project.SharedProject=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.project.PingPongCentral=DEBUG
-log4j.logger.de.fu_berlin.inf.dpp.ui.LocalPresenceTracker=INFO
-log4j.logger.de.fu_berlin.inf.dpp.util.pico=WARN
-log4j.logger.de.fu_berlin.inf.dpp.vcs=TRACE
+log4j.logger.com.timgroup.saros.proxy=DEBUG
