--- a/com.timgroup.saros.proxy/build.properties
+++ b/com.timgroup.saros.proxy/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                build.properties,\
-               saros.proxy.log4j.properties
+               saros.proxy.log4j.properties,\
+               lib/
